--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-/*
-Template Name: Bodo - Simple One Page Personal
-Author: BdgPixel
-Author URI:  http://themeforest.net/user/BdgPixel
-*/
+
 /* -----------------------------------------------------------
 TABLE OF CONTENTS:
 --------------------------------------------------------------
@@ -81,6 +77,12 @@ iframe {
 img { max-width: 100%; }
 *:focus {
   outline: none;
+}
+
+.divLines {
+  width: 100px; 
+  border-bottom: 1px solid #999; 
+  margin: 0 auto;
 }
 
 /*----------------------------------------- 2) Preloader --------------------------------------------------*/
@@ -555,21 +557,19 @@ p {
 
 /*----------------------------------------- 7) Sections --------------------------------------------------*/
 /*---------- a. portfolio -----------*/
+
 ul.portfolio-image {
   list-style: none;
   position: relative;
-  width: 100%;
-  padding: 0;
-  margin: 0;
+  height: 40vw;
 }
 ul.portfolio-image li {
-  float: left;
-  display: block;
   list-style: none;
   position: relative;
-  display: inline-block;
   overflow: hidden;
-  padding-top: 46%;
+  margin: 20px;
+  width: 40vw;
+  height: 40vw;
 }
 ul.portfolio-image li:hover {
   cursor: pointer;
@@ -588,6 +588,7 @@ ul.portfolio-image li img {
   height: 100%;
   left: 0;
   top: 0;
+  object-fit: cover;
   -webkit-filter: grayscale(100%);
   transition: filter, transform, 0.5s;
 }
@@ -600,6 +601,7 @@ ul.portfolio-image li .decription-wrap {
   background: rgba(242, 242, 242, 0.4);
   padding: 20px;
   transition: background, 0.5s;
+  cursor: pointer;
 }
 ul.portfolio-image li .image-bg {
   color: #2f2f2f;
@@ -628,7 +630,7 @@ ul.portfolio-image li .image-bg {
 ul.portfolio-image li .desc{
   position: absolute;
   z-index: 1;
-  top: 45%;
+  top: 40%;
   left: 0;
   display: table-cell;
   right: 0;
@@ -636,6 +638,19 @@ ul.portfolio-image li .desc{
   color: #2f2f2f;
   font-size: 14px;
   font-weight: 700;
+}
+
+.container .row {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 45vw;
+}
+
+.col-md-3 {
+  width: 40vw !important;
+  margin-right: 5vw !important;
 }
 
 
@@ -869,12 +884,11 @@ ul.portfolio-image li .desc{
   width: 100%;
 }
 .bg-about {
-  background: url('../images/reza.jpg');
+  background: url('../images/about-meB&W.jpg') center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
   position: relative;
   padding: 0;
   margin: 0;
