--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ img { max-width: 100%; }
 }
 .white-bg {
   background: #ffffff;
-  padding: 30px 0;
+  padding: 10px 0;
   display: block;
 }
 /*-------- content --------*/
@@ -276,8 +276,8 @@ img { max-width: 100%; }
 .menu-button:hover {opacity: 0.6;}
 /* Close Button */
 .close-button {
-  width: 1em;
-  height: 1em;
+  width: 1.5em;
+  height: 1.5em;
   position: absolute;
   right: 1em;
   top: 1em;
@@ -292,7 +292,7 @@ img { max-width: 100%; }
 .close-button::after {
   content: '';
   position: absolute;
-  width: 3px;
+  width: 1px;
   height: 100%;
   top: 0;
   left: 50%;
@@ -386,8 +386,8 @@ img { max-width: 100%; }
   content: '';
   display: block;
   width: 0;
-  height: 2px;
-  background: #ffffff;
+  height: 1px;
+  background: #999;
   -webkit-transition: width .3s ease;
   transition: width .3s ease;
   position: absolute;
@@ -589,7 +589,7 @@ ul.portfolio-image li img {
   left: 0;
   top: 0;
   object-fit: cover;
-  -webkit-filter: grayscale(100%) contrast(90%);
+  /*-webkit-filter: grayscale(100%) contrast(90%);*/
   transition: filter, transform, 0.5s;
 }
 ul.portfolio-image li .decription-wrap {
@@ -938,7 +938,37 @@ ul.portfolio-image li .desc{
   font-size: 14px;
 }
 /*---------- g. contact -----------*/
-#contact {padding: 120px 0 200px 0;}
+
+#contact button {
+  background: transparent;
+  font-size: 12px;
+  width: 100px;
+  height: 40px;
+  border: 1px solid #999;
+  color: white;
+  margin: 10px auto;
+  display: block;
+}
+
+#contact button:hover {
+  background: #999;
+  color: #2f2f2f;
+}
+
+#contact .row{
+  padding: 20px 0 20px 0;
+  flex-direction: column;
+  }
+
+#contact h4 {
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+#contact p {
+  text-align: center;
+}
+
 #contact form {
   margin-top: 25px;
 }
@@ -1192,6 +1222,14 @@ ul.portfolio-image li .desc{
   margin-bottom: 40px;
 }
 
+.skills-container {
+  display: flex;
+  margin-top: 40px;
+}
+
+.skills-container > div {
+  margin: 0 40px;
+}
 
 
 .skillst {margin-top: 30px;}
