--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -79,7 +79,8 @@
 
 .slick-prev
 {
-    left: -25px;
+    left: -70px;
+    top: 20px;
 }
 [dir='rtl'] .slick-prev
 {
@@ -97,7 +98,8 @@
 
 .slick-next
 {
-    right: -25px;
+    right: -70px;
+    top: 20px;
 }
 [dir='rtl'] .slick-next
 {
@@ -122,7 +124,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    bottom: -50px;
 
     display: block;
 
