--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ img { max-width: 100%; }
   height: 100%;
   right: 0;
   float: right;
-  background: #2f2f2f;
+  background: #111;
   padding: 2.5em 1.5em 0;
   -webkit-transform: translate3d(300px, 0, 0);
   transform: translate3d(300px, 0, 0);
@@ -1211,7 +1211,7 @@ ul.portfolio-image li .desc{
 
 .footer-bottom{
   width: 100%;
-  background: #2f2f2f;
+  background: #222;
   padding: 80px 0;
   color: #636363;
 }
